# D2API

./: .gitignore  .gitmodules  Dockerfile.prod  README.md  TODO.md  docker-compose.dev.yml  docker-compose.prod.yml  main.py  pyproject.toml
resources/: collectables.json  runes.json
scripts/: dump.sh  entrypoint.sh  populate.sh
scripts/dev/: init.sh
scripts/grid_maps/: grid_maps.py
scripts/helper/: grid_maps.py  main.py
scripts/populate/: collectable_init.py  const.py  create_initial_user.py  populate_db.py
scripts/prod/: start.server.sh  stop.server.sh
src/: database.py
src/alembic/: alembic.ini
src/entities/: map_with_action.py
src/models/: __init__.py  area.py  breed.py  character.py  character_job_info.py  character_path_info.py  character_path_map.py  character_sell_item_info.py  collectable.py  drop.py  effect.py  equipment.py  icon.py  ingredient.py  item.py  job.py  map.py  map_direction.py  monster.py  price.py  recipe.py  region.py  rune.py  server.py  spell.py  sub_area.py  template_found.py  type_item.py  user.py  waypoint.py
src/queries/: astar_maps.py  auth.py  character.py  collectable.py  job.py  map.py  monster.py  recipe.py  spell.py  stat.py  sub_area.py  template_found.py  user.py  utils.py  waypoint.py  zaapi.py
src/routers/: auth.py  breed.py  character.py  character_path_info.py  character_path_map.py  collectable.py  config_user.py  equipment.py  item.py  job.py  line.py  login.py  map.py  price.py  recipe.py  server.py  spell.py  stat.py  sub_area.py  template.py  type_item.py  user.py  world.py
src/security/: auth.py
(+82 files in other folders)
